--- a/templates/layout.pug
+++ b/templates/layout.pug
@@ -12,6 +12,7 @@ html(lang='en')
           = locals.name
       link(rel='alternate', href=locals.url+'/feed.xml', type='application/rss+xml', title=locals.description)
       link(rel='stylesheet', href='//fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic|Anonymous+Pro:400,700,400italic,700italic|Merriweather:400,700,300')
+      link(rel='stylesheet', href='//fonts.googleapis.com/css?family=Fira+Sans|Merriweather" rel="stylesheet')
       link(rel='stylesheet', href=contents.css['main.css'].url)
   body(class=bodyclass)
     header.header
